# advent-of-code

./: .gitignore  :w  README.md  mise.toml
2022/: bacon.toml  go.mod  main.go  mise.toml
2022/days/day_1/: day_1_test.go  main.go
2022/days/day_10/: main.go  main_test.go
2022/days/day_11/: README.md  main.go  main_test.go
2022/days/day_12/: main.go  main_test.go
2022/days/day_2/: day_2_test.go  main.go  main_test.go
2022/days/day_3/: main.go  main_test.go
2022/days/day_4/: main.go  main_test.go
2022/days/day_5/: main.go  main_test.go
2022/days/day_6/: main.go  main_test.go
2022/days/day_7/: main.go  main_test.go
2022/days/day_8/: main.go  main_test.go
2022/days/day_9/: main.go  main_test.go
2022/lib/: file.go  general.go  print.go
2022/lib/operations/: main.go
2022/tests/: main.go
2023/: 2023.csproj  2023.slnx  Program.cs  mise.toml
2023/Days/: Day1.cs  Day2.cs  Day3.cs  Utils.cs
2023/Days.Tests/: Day1.cs  Day1Tests.cs  Day2Tests.cs  Day3Tests.cs  Days.Tests.csproj
2023/Runner/: Program.cs  Runner.csproj
2023/Utils/: Utils.cs
2024/: .gitignore  Cargo.toml  README.md  mise.toml
2024-old/: mise.toml
2024-old/01/: CMakeLists.txt  mise.toml
2024/01/: historian-hysteria.py  mise.toml  red-nosed-reports.cpp
2024/02/: CMakeLists.txt  mise.toml  red-nosed-reports.cpp
2024/src/: main.rs
2024/src/days/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs
2024/src/utils/: file.rs  lib.rs  list.rs  mod.rs
2025/: .gitignore  README.md  mise.toml
2025/01/: README.md  build.zig  build.zig.zon  mise.toml
2025/01/src/: main.zig
2025/02/: README.md  mise.toml  piet.sh  solution.py
2025/03/: README.md  mise.toml  solution.exs
2025/04/: README.md  mise.toml  part-one.sh  part-two.sh
2025/05/: README.md  mise.toml  solution.c
2025/06/: CMakeLists.txt  README.md  mise.toml  solution.cpp
2025/06/Qaz/: CMakeLists.txt  qaz_kosu_kosu.cpp  qaz_kosu_kosu.h
2025/07/: README.md  mise.toml  solution.go
2025/08/: CMakeLists.txt  main.cpp  mise.toml  solution.cpp
2025/08/inputs/: main.txt
2025/08/internal/: algorithm.h  camera.h  shader.h
2025/08/shaders/: instanced-line-fragment.glsl  instanced-line-vertex.glsl  light-vertex.glsl  line-fragment.glsl
2025/08/solution/: CMakeLists.txt  solution.cpp  solution.h
2025/09/: solution.py
2025/10/: README.md  index.js  index.js.map  index.ts  main.ts  mise.toml  package-lock.json  package.json  part-two.ts  tsconfig.json
2025/11/: README.md  mise.toml  solution.lua
2025/12/: README.md  mise.toml
(+4 files in other folders)
